# metaphor-machine

./: .gitignore  README.md
.github/workflows/: publish.yml
metaphor-machine/: README.md  metaphor-machine.py  personas.yaml  style_components.yaml
module/: LICENSE  README.md  pyproject.toml
module/src/metaphor_machine/: __init__.py
module/src/metaphor_machine/cli/: __init__.py  main.py
module/src/metaphor_machine/core/: __init__.py  generator.py  metaphor.py
module/src/metaphor_machine/corpus/: __init__.py  storage.py
module/src/metaphor_machine/optimization/: __init__.py  bayesian.py  fitness.py  genetic.py
module/src/metaphor_machine/schemas/: __init__.py  components.py  config.py
module/src/metaphor_machine/utils/: __init__.py  formatting.py  validation.py
module/tests/: __init__.py  conftest.py
module/tests/integration/: __init__.py
module/tests/unit/: __init__.py  test_bayesian.py  test_corpus.py  test_fitness.py  test_generator.py  test_genetic.py  test_metaphor.py
